# rift

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: DOCKER_SETUP.md
.github/workflows/: ci.yml  docker-publish-benchmark.yml  docker-publish.yml  publish-crate.yml  release.yml
crates/rift-http-proxy/: Cargo.toml  PREDICATE_OPTIMIZATION.md
crates/rift-http-proxy/src/: admin_api.rs  config.rs  fault.rs  imposter.rs  lib.rs  main.rs  matcher.rs  metrics.rs  predicate.rs  proxy.rs  recording.rs
crates/rift-http-proxy/src/admin_api/handlers/: imposters.rs
crates/rift-http-proxy/src/backends/: inmemory.rs  redis.rs
crates/rift-http-proxy/src/extensions/: flow_state.rs  stub_analysis.rs
crates/rift-http-proxy/src/imposter/: core.rs  manager.rs  mod.rs  optimized_predicates.rs  predicate_optimizer.rs  predicates.rs  response.rs  tests.rs  types.rs
crates/rift-http-proxy/src/scripting/: decision_cache.rs  js_engine.rs  js_validator.rs  lua_engine.rs  lua_validator.rs  mod.rs  rhai_engine.rs  rhai_validator.rs  script_pool.rs  stub_validator.rs
crates/rift-lint/: Dockerfile  README.md
docs/: index.md
docs/configuration/: cli.md  mountebank.md
docs/demo/: README.md  docker-compose-retry-proxy.yml  imposters-retry-proxy.json  test-retry-proxy.sh
docs/deployment/: docker.md
docs/features/: fault-injection.md  index.md  linting.md  scripting.md
docs/getting-started/: quickstart.md
docs/mountebank/: behaviors.md  imposters.md  predicates.md  responses.md
tests/benchmark/: .gitignore  README.md  docker-compose.yml
(+7 files in other folders)
